CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(TestPlugins)

FIND_PACKAGE(Talipot REQUIRED)

TALIPOT_SET_COMPILER_OPTIONS_AND_DEFINITIONS()

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${TALIPOT_INCLUDE_DIR})

TALIPOT_ADD_PLUGIN(
  NAME
  TestPlugins
  SRCS
  TestPlugins.cpp
  LINKS
  ${TALIPOT_CORE_LIBRARY}
  INSTALL_DIR
  ${TALIPOT_PLUGINS_DIR}/test)
